--- a/app/src/main/res/layout/activity_offers.xml
+++ b/app/src/main/res/layout/activity_offers.xml
@@ -22,10 +22,11 @@ tools:context=".activity.MainActivity">
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/activity_offers"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="35dp"
-        android:paddingRight="45dp"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
         tools:context="com.fyp.mrisecondscreen.activity.OffersActivity">
 
         <ListView
