--- a/app/src/main/res/layout/banner_layout.xml
+++ b/app/src/main/res/layout/banner_layout.xml
@@ -48,10 +48,20 @@
             android:layout_height="wrap_content"
             android:padding="20dp"
             android:text="Redeem Now"
-            android:background="@color/colorPrimaryDark"
+            android:background="#333"
             android:textColor="#FFF"
-            android:layout_below="@id/banner_text"
             android:id="@+id/banner_redeem"/>
+
+        <Button
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:padding="20dp"
+            android:text="Share on Facebook"
+            android:textColor="#fff"
+            android:background="@color/colorPrimaryDark"
+            android:id="@+id/banner_fb_share"
+            android:textSize="13dp"/>
 
         <Button
             android:layout_height="wrap_content"
@@ -61,7 +71,6 @@
             android:text="Redeem Later"
             android:background="#333"
             android:textColor="#fff"
-            android:layout_below="@id/banner_text"
             android:id="@+id/banner_cancel"/>
 
     </LinearLayout>
