--- a/app/src/main/res/layout/banner_layout.xml
+++ b/app/src/main/res/layout/banner_layout.xml
@@ -43,35 +43,26 @@
         android:layout_below="@id/banner_text">
 
         <Button
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:padding="20dp"
-            android:text="Redeem Now"
+            android:text="Redeem\nNow"
             android:background="#333"
-            android:textColor="#FFF"
-            android:id="@+id/banner_redeem"/>
+            android:textColor="#fff"
+            android:id="@+id/banner_cancel"
+            android:textSize="14sp"/>
 
         <Button
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:padding="20dp"
-            android:text="Share on Facebook"
+            android:text="Share on\nFacebook"
             android:textColor="#fff"
             android:background="@color/colorPrimaryDark"
             android:id="@+id/banner_fb_share"
-            android:textSize="12dp"/>
-
-        <Button
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:padding="20dp"
-            android:text="Redeem Later"
-            android:background="#333"
-            android:textColor="#fff"
-            android:id="@+id/banner_cancel"/>
+            android:textSize="14sp"/>
 
     </LinearLayout>
 
