--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -7,13 +7,43 @@
     android:layout_height="match_parent"
     tools:context=".activity.LoginActivity">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Signing in"
+                android:visibility="gone"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="100dp"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:id="@+id/SigningInText" />
+
+            <ProgressBar
+                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/SigningInText"
+                android:layout_centerHorizontal="true"
+                android:visibility="gone"
+                android:id="@+id/SigningInProgressBar" />
+    </RelativeLayout>
 
     <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/scrollView1"
+        android:id="@+id/LoginView"
         android:layout_width="fill_parent"
         android:layout_height="match_parent">
+
 
         <LinearLayout
             android:layout_width="fill_parent"
